Fixed calender not showing up

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
 
 }
 .box {
-    height: 160px;
+    height: 200px;
 }
 #tweetContent {
 
